--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -15335,3 +15335,7 @@ style#:#sty_va_iheada_class#:#Vert. Accordion Header (active)
 style#:#sty_va_ihcap_class#:#Vert. Accordion Caption
 exc#:#exc_delete_team#:#Delete Team
 trac#:#trac_cron_info#:#Please activate the "Object Statistics" cron job to gather data.
+help#:#help_tt_disable#:#Disable Help Tooltips
+help#:#help_tt_enable#:#Enable Help Tooltips
+common#:#obj_pdfg#:#PDF Generation
+common#:#obj_pdfg_desc#:#Options for generation PDF documents
